@@ -3,5 +3,5 @@
 set -euxo pipefail
 OPTS=${JAVA_OPTS:-"-Xmx1g -verbose:gc"}
 
-exec /usr/bin/java $OPTS -jar /app/nixiesearch.jar "$@"
+exec /usr/bin/java $OPTS --enable-preview -jar /app/nixiesearch.jar "$@"
 
